[package]
name = "traceserver"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
publish = false


[dependencies]
tungstenite = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"
